2004-02-26  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>
	* src/search-replace.c : improved Search&Replace
	For the moment "Replace All" does not work with non opened files
	but Anjuta should not crash now ! ??? 
	
2004-02-26  Naba Kumar  <naba@gnome.or>

	* src/source.c: Fixed to pass cflags correctly
	and suppress the automake's default cflags.
	bug #816130, #801056, #782798, #773459
	
	* data/properties/anjuta.properties: Do not defualt to -k make option.
	bug #875486.

	* manuals/C/anjuta-manual/build.xml: Changed build shortcut to F11.
	bug #877683.
	
2004-02-25  Adam Weinberger  <adamw@FreeBSD.org>

	* configure.in: Added 'en_CA' (Canadian English) to ALL_LINGUAS.

2004-02-25  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>
	* anjuta.glade  src/search-replace.c
	Reduced Search&Replace dialog  :  bug #902636
	
2004-02-23  Naba Kumar  <naba@gnome.or>

	* manuals/C/anjuta-tutorial/anjuta-tutorial.xml: Fixed a typo
	(bug #866143).

2004-02-24  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>
	* src/search_incremental.c
	Fixed bug #900903

2004-02-23  Pavol Bosik <Pavol.Bosik@siemens.com>
	
	* src/defaults.c
	* src/message-manager.cc
	* src/project_dbase.c
	* src/anjuta.c:
	Fixed bugs #890609 and #890609

2004-02-23  Naba Kumar  <naba@gnome.or>

	* src/message-manager.cc: Disconnects menuitem signal properly.
	Fixed bug #901723.
	
	* src/mainmenu_callbacks.c: Do not reload new files. Fixed
	bug #900897.
	
2004-02-20  Naba Kumar  <naba@gnome.org>

	* src/message-manager-private.[c,h]: Implemented keypress
	event for the terminal and resets it when ctrl c or ctrl d
	is pressed. But it doesn't seem to be working on keypress.
	Added a workaround to let it work on key release instead.
	(bug #878357).
	
	* src/search-replace: Fixed compiler warnings.
	
2004-02-18  Franco Catrin  <fcatrin@tuxpan.com>

	* src/mainmenu_callbacks.c, widgets/gnomefilelist.c
	Use defined file name when saving new files	(fixes bug #898105)